# researchcrew_v1

./: check_yaml.py  main.py  pyproject.toml  requirements.txt
config/: Tasks.yaml  agents.yaml  crew.py
