[tool.poetry]
name = "Research Crew"
version = "0.1.0"
description = "Basic research agentic crew."


[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
crewai = "^0.85.0"
python-dotenv = "1.0.0"
langchain_openai = "0.0.2"
langchain-community = "0.0.10"
langchain-ollama = "0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"